# psa_2025

CKS/Ciclo 1.1/: apresentacao.md
CKS/Ciclo 1.2/: material.md
CKS/Ciclo 1.2/relatorios/: Carla.md  Keren.md
CKS/Ciclo I/: apresentacao.md  refatoracao_com_ia.md
CREV/2º Ciclo/Funcional/Heskell/: CHANGELOG.md  Heskell.cabal  cod_ant.txt
CREV/2º Ciclo/Funcional/Heskell/app/: Main.hs
CREV/2º Ciclo/Funcional/Heskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Los bandoleiros/Ciclo I/: Projeto PSA.pptx
Los bandoleiros/Ciclo II/: Diferentes Paradigmas da Programação.pptx  Roteiro - Diferentes Paradigmas da Programação.docx
YET/Dependência de IA/: README.md  report.md  script_final.py
YET/Programação Funcional/: Ativadade-Equipe.md  README.md  prime.c  prime.hs
