cabal-version:   3.12
name:            Heskell
version:         0.1.0.0
license:         NONE
author:          Eduardo Cavazin
maintainer:      eduardotorcav@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable Heskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
